# stm32c031k4t6

./: .gitignore  Cargo.toml  dro08.x  memory.x  output.map
.cargo/: config.toml
dro_doc/: high_level_design_dro08.md  low_level_design_dro08.md  operator_manual_dro08.md  requirements_dro08.md
src/: bsp.rs  encoder.rs  flash.rs  main.rs  modbus.rs  relay.rs  tm1638.rs  usart1.rs
src/drivers/: encoder.rs  tm1638.rs  uart.rs
src/storage/: eeprom.rs
